merged changes from memory_management15 branch