@@ -49,6 +49,7 @@ package org.knime.core.util;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.security.InvalidKeyException;
+import java.util.Base64;
 
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
@@ -58,9 +59,6 @@ import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 
 import org.knime.core.node.NodeLogger;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 /**
  * This class handles the encryption and decryption with the static stored key.
@@ -136,7 +134,7 @@ public final class KnimeEncryption {
         cipher.init(Cipher.ENCRYPT_MODE, secretKey);
         byte[] ciphertext = cipher.doFinal(
                 new String(password).getBytes("UTF-8"));
-        return new BASE64Encoder().encode(ciphertext);
+        return Base64.getEncoder().encodeToString(ciphertext);
     }
 
     /**
@@ -180,7 +178,7 @@ public final class KnimeEncryption {
             return password;
         }
         // perform the decryption
-        byte[] pw = new BASE64Decoder().decodeBuffer(password);
+        byte[] pw = Base64.getDecoder().decode(password);
         cipher.init(Cipher.DECRYPT_MODE, secretKey);
         byte[] decryptedText = cipher.doFinal(pw);
         return new String(decryptedText, "UTF-8");
